--- a/css/fixedColumns.foundation.scss
+++ b/css/fixedColumns.foundation.scss
@@ -1,7 +1,9 @@
 
-$fixedcolumns-header-color: rgb(248, 248, 248) !default;
-
 @import 'fixedColumns.dataTables.scss';
+
+:root {
+    --dtfc-thead-cell_background: rgb(248, 248, 248);
+}
 
 table.dataTable {
 	// Due to Chrome https://bugs.chromium.org/p/chromium/issues/detail?id=712847
