Update: SCSS updates for Dart SASS changes. No functional change - compile time only

--- a/css/fixedColumns.bulma.scss
+++ b/css/fixedColumns.bulma.scss
@@ -1,6 +1,6 @@
 
 
-@import 'fixedColumns.dataTables.scss';
+@use 'fixedColumns.dataTables.scss';
 
 table.dataTable {
 	// Due to Chrome https://bugs.chromium.org/p/chromium/issues/detail?id=712847
