--- a/css/fixedColumns.jqueryui.scss
+++ b/css/fixedColumns.jqueryui.scss
@@ -1,5 +1,5 @@
 
-@import 'fixedColumns.dataTables.scss';
+@use 'fixedColumns.dataTables.scss';
 
 div.dtfc-top-blocker {
 	border-bottom: none !important;
