--- a/css/fixedColumns.semanticui.scss
+++ b/css/fixedColumns.semanticui.scss
@@ -1,5 +1,5 @@
 
-@import 'fixedColumns.dataTables.scss';
+@use 'fixedColumns.dataTables.scss';
 
 :root {
     --dtfc-thead-cell_background: #f9fafb;
