Fix: Don't set a header background when using jQuery UI styling. Allow the style to do that.
https://datatables.net/forums/discussion/81690/

--- a/css/fixedColumns.dataTables.scss
+++ b/css/fixedColumns.dataTables.scss
@@ -1,3 +1,4 @@
+$set-header-background: true !default;
 
 :root {
     --dtfc_background: white;
@@ -19,7 +20,10 @@ table.dataTable {
             top: 0;
             bottom: 0;
             z-index: 3;
-            background-color: var(--dtfc-thead-cell_background);
+
+            @if $set-header-background {
+                background-color: var(--dtfc-thead-cell_background);
+            }
         }
     }
 
